src/test/ui/issues/issue-21202.stderr
error[E0624]: method `foo` is private
  --> $DIR/issue-21202.rs:10:9
   |
LL |         Foo::foo(&f);
   |         ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
